--- a/resources/style.css
+++ b/resources/style.css
@@ -23,6 +23,7 @@ header {
   color: seashell;
   opacity: 0.9;
   border-bottom: 1px solid seashell;
+  background-color: black;
 }
 
 .logo img {
@@ -37,3 +38,27 @@ header {
 }
 
 /* End Header */
+
+/* Begin Mission Section */
+
+.missionsection {
+  display: flex;
+  background-image: url('https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg');
+  height: 700px;
+  width: 1200px;
+  margin: auto;
+}
+
+.missioninfo {
+  align-self: center;
+  font-family: Helvetica;
+  font-size: 22px;
+  color: seashell;
+  background-color: black;
+  height: 100px;
+  width: 1200px;
+  text-align: center;
+  padding: 15px 15px;
+}
+
+/* End Mission Section */
