--- a/resources/style.css
+++ b/resources/style.css
@@ -78,7 +78,48 @@ header {
   text-align: center;
   margin: auto;
   padding-top: 65px;
+  padding-bottom: 15px;
 }
 
+.teamonthphotos {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: auto;
+  width: 1000px;
+
+}
+
+.teaphoto1 img {
+  width: 300px;
+  height: 200px;
+  padding: 10px 10px;
+}
+
+.teaphoto2 img {
+  width: 300px;
+  height: 200px;
+  padding: 10px 10px;
+}
+
+.teaphoto3 img {
+  width: 300px;
+  height: 200px;
+  padding: 10px 10px;
+}
+
+.teaphoto4 img {
+  width: 300px;
+  height: 200px;
+  padding: 10px 10px;
+  margin-left: 195px;
+}
+
+.teaphoto5 img {
+  width: 300px;
+  height: 200px;
+  padding: 10px;
+  margin-right: 195px;
+}
 
 /* End Tea of the Month Section */
