--- a/resources/style.css
+++ b/resources/style.css
@@ -93,6 +93,7 @@ header {
   width: 300px;
   height: 200px;
   padding: 10px 10px;
+  margin-left: 40px;
 }
 
 .teaphoto2 img {
@@ -105,6 +106,7 @@ header {
   width: 300px;
   height: 200px;
   padding: 10px 10px;
+  margin-right: 40px;
 }
 
 .teaphototext {
@@ -116,6 +118,14 @@ header {
   height: 50px;
   background-color: black;
   text-align: center;
+}
+
+.teaphototext.one {
+  margin-left: 40px;
+}
+
+.teaphototext.three {
+  margin-right: 40px;
 }
 
 .teaphoto4 img {
@@ -141,3 +151,18 @@ header {
 }
 
 /* End Tea of the Month Section */
+
+/* Begin Locations Section */
+
+.locationscontainer {
+  display: flex;
+  height: 500px;
+  width: 1200px;
+  margin: auto;
+  background-image:url('https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg');
+  font-family: Helvetica;
+  font-size: 22px;
+  color: seashell;
+}
+
+/* End Locations Section */
