--- a/resources/style.css
+++ b/resources/style.css
@@ -156,6 +156,8 @@ header {
 
 .locationscontainer {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
   height: 500px;
   width: 1200px;
   margin: auto;
@@ -163,6 +165,24 @@ header {
   font-family: Helvetica;
   font-size: 22px;
   color: seashell;
+}
+
+.locations {
+  opacity: 0.9;
+  margin: auto;
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  opacity: 0.9;
+}
+
+.address {
+  width: 300px;
+  height: 300px;
+  background-color: black;
+  opacity: 1;
+  text-align: center;
+  padding: 15px 20px 0px 20px;
 }
 
 /* End Locations Section */
