--- a/resources/style.css
+++ b/resources/style.css
@@ -63,8 +63,8 @@ header {
   padding: 15px 15px;
 }
 
-.missioninfo h2 h4 {
-  opacity: 0.9;
+/*.missioninfo h2 h4 {
+  opacity: 0.9;*/
 }
 
 /* End Mission Section */
@@ -223,6 +223,7 @@ footer {
   opacity: 0.9;
   text-align: left;
   padding-left: 20px;
+  padding-bottom: 20px;
 }
 
 /* End Copyright Section */
